# dwservice-agent

./: .cmake-format.yaml  CMakeLists.txt
app_desktop/: capture.py  common.py  desktop.py  encoder.py
app_desktop/mytest/: test_library_screen.py  test_library_sound.py
app_filesystem/: filesystem.py
app_logwatch/: logwatch.py
app_resource/: resource.py
app_shell/: shell.py
app_shell/os_win_pyconpty/: conpty.py
app_shell/os_win_pyconpty/win32/: native.py
app_texteditor/: texteditor.py
core/: agent.py  applications.py  communication.py  detectinfo.py  ipc.py  listener.py  native.py  resources.py  utils.py
core/mytest/: test_ipc_condition.py  test_ipc_lock.py  test_ipc_memmap.py  test_ipc_property.py  test_ipc_stream.py  test_runonfly.py
lib_core/: CMakeLists.txt
lib_gdi/: CMakeLists.txt
lib_osutil/: CMakeLists.txt
lib_screencapture/: CMakeLists.txt
lib_screencapture/src/: main.cpp  main.h
lib_screencapture/src/common/: timecounter.cpp
lib_soundcapture/: CMakeLists.txt
make/: compile_all.py  compile_generic.py  compile_lib_core.py  compile_lib_gdi.py  compile_lib_osutil.py  compile_lib_screencapture.py  compile_lib_screencapture_bitblt.py  compile_lib_screencapture_desktopduplication.py  compile_lib_screencapture_quartzdisplay.py  compile_lib_screencapture_xorg.py  compile_lib_soundcapture.py  compile_os_win_launcher.py  compile_os_win_service.py  compile_os_win_updater.py  create_config.py  detectinfo.py  utils.py
ui/: configure.py  gdi.py  installer.py  monitor.py  ui.py
ui/messages/: it.py
ui/mytest/: test_configure.py  test_gdi.py  test_installer.py  test_monitor.py
